--- a/views/fragmente/head.ejs
+++ b/views/fragmente/head.ejs
@@ -1,7 +1,11 @@
-<meta charset="UTF-8">
-
 <meta name="author" content="Nicoi Alexandru">
-<!--3) Adaugati un title corespunzator continutului textului-->
+<link rel="stylesheet" href="/resurse/css/main.css" type="text/css" />
+<link rel="stylesheet" href="/resurse/css/nav.css" type="text/css" />
+<link rel="stylesheet" href="/resurse/css/style.css" media="only screen and (min-width:1000px)" type="text/css"/>
+<link rel="stylesheet" href="/resurse/css/style-1000.css" media="only screen and (min-width:451px) and (max-width:999px)" type="text/css" />
+<link rel="stylesheet" href="/resurse/css/style-450.css" media="only screen and (max-width:450px)" type="text/css"/>
+<script src="https://use.fontawesome.com/420035dafb.js"></script>
+<!--2) Folositi 4 taguri meta relevante pentru a specifica: charset-ul, autorul, cuvintele cheie, descrierea.-->
 
 <!--4) Adaugati un favicon relevant pentru temă.-->
-<link rel="shortcut icon" type="image/x-icon" href="./favicon.ico">
+<link rel="shortcut icon" type="image/x-icon" href="/resurse/ico/favicon.ico">
