--- a/views/fragmente/footer.ejs
+++ b/views/fragmente/footer.ejs
@@ -1,11 +1,12 @@
 <footer id="div-footer">
+    <p id="watermark">Copyright &copy; Alexandru Nicoi</p>
     <!--13) În footer se vor adăuga cu ajutorul tagului address informații de contact (telefon fictiv, marcată cu tagul a corespunzător, adresă fictivă, e-mail fictiv, marcat cu tagul a corespunzător)
     14) În footer se va adăuga informație de copyright, folosind tagul small, simbolul specific de copyright cu codul html necesar și data creării paginii scrisă în limba română și pusă în tagul time cu atributul datetime corespunzător. -->
-    <a href="#"><div title="Inapoi sus" id = "headerjos2"><div id = "cone"></div></div>  </a>
+    <a id="top" href="#"><div title="Inapoi sus" id = "headerjos2"><div id = "cone"></div></div>  </a>
     <address id="contact">
-        Telefon:<a href="tel:0712-345-678"> 0712 345 678</a>a<br>
+        Telefon:<a id="tel" href="tel:0712-345-678"> 0712 345 678</a><br>
         Adresa: Bd Republicii nr. 95, Ploiesti 100095<br>
-        E-mail: <a href="mailto:alextrucks@gmail.com">alextrucks@gmail.com</a>
+        E-mail: <a id="mail" href="mailto:alextrucks@gmail.com">alextrucks@gmail.com</a>
     </address>
     <small>Copyright &copy; <time datetime="2021-10-11">11 Octombrie 2021</time> SC AlexTrucks SRL</small>
 </footer>
