--- a/views/fragmente/head.ejs
+++ b/views/fragmente/head.ejs
@@ -4,6 +4,9 @@
 <link rel="stylesheet" href="/resurse/css/style.css" media="only screen and (min-width:1000px)" type="text/css"/>
 <link rel="stylesheet" href="/resurse/css/style-1000.css" media="only screen and (min-width:451px) and (max-width:999px)" type="text/css" />
 <link rel="stylesheet" href="/resurse/css/style-450.css" media="only screen and (max-width:450px)" type="text/css"/>
+<link rel="stylesheet" href="/resurse/css/print-style.css" type="text/css" media="print">
+<link rel="stylesheet" href="/resurse/css/galerie-statica.css" type="text/css" />
+<link rel="stylesheet" href="/resurse/css/galerie-animata.css" type="text/css" />
 <script src="https://use.fontawesome.com/420035dafb.js"></script>
 <!--2) Folositi 4 taguri meta relevante pentru a specifica: charset-ul, autorul, cuvintele cheie, descrierea.-->
 
