--- a/views/pagini/produse.ejs
+++ b/views/pagini/produse.ejs
@@ -1,25 +1,115 @@
-<!--1) Creați o pagină numită index.html. Adăugați doctype și setați limba documentului în tagul html-->
 <!DOCTYPE html>
-<html lang="ro">
-<head>
-    <meta charset="UTF-8">
-    <meta name="keywords" content="truckstore, truck, man, scania, volvo, daf, camion, alextrucks"> <!--9)Textul trebuie să conțină toate cuvintele cheie identificate pentru pagina curentă-->
-    <meta name="description" content="EROARE 404">
-    <!--3) Adaugati un title corespunzator continutului textului-->
-    <title>AlexTruck Store</title>
-    <%- include("../fragmente/head.ejs") %>
-</head>
-<body>
+<html  lang="ro">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="keywords" content="truckstore, truck, man, scania, volvo, daf, camion, alextrucks"> <!--9)Textul trebuie să conțină toate cuvintele cheie identificate pentru pagina curentă-->
+        <meta name="description" content="Dealer autorizat de autocamioane multi-marca">
+        <!--3) Adaugati un title corespunzator continutului textului-->
+        <title>AlexTruck Store</title>
 
-<%- include("../fragmente/header.ejs") %>
-<main>
-    <% for( let prod of locals.produse) { %>
-    <article class="produs" >
-        <h3 class="nume">Nume: <a href="/produs/<%-prod.id %>" ><span class="val-nume"><%- prod.nume%></span></a></h3>
-    </article>
+        <%- include("../fragmente/head.ejs") %>
+        <link rel="stylesheet" href="/resurse/css/produse.css" type="text/css" />
+        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
-    <% }%>
-</main>
-<%- include("../fragmente/footer.ejs") %>
-</body>
+
+    </head>
+    <body>
+    <%- include("../fragmente/header.ejs") %>
+
+    <main>
+        <script type="text/javascript" src=/resurse/js/produse.js></script>
+        <script type="text/javascript" src=/resurse/js/dateUtils.js></script>
+
+        <label> Nume: <input type="text" id="inp-nume"></label>
+        <label> Cuvinte cheie: <input type="text" id="inp-cuvinte-cheie"></label>
+        <!--<label> Maxim calorii: <input type="number" id="inp-calorii" value="10000"></label>-->
+        <div> Norma de Poluare:<!-- trebuie sa aiba acelasi name ca sa formeze un grup -->
+            <label>Poluant (&lt; Euro 4)
+                <input id="i_rad1"  name="gr_rad" value="1" type="radio"/>
+            </label>
+            <label>Mediu (Euro 4&le; calorii &lt; Euro 6)
+                <input id="i_rad2"  name="gr_rad" value="2" type="radio"/>
+            </label>
+            <label>Non-poluant (&ge; Euro 6)
+                <input id="i_rad3" name="gr_rad" value="3" type="radio"/>
+            </label>
+            <label>Toate
+                <input id="i_rad4" checked name="gr_rad" value="4" type="radio"/>
+            </label>
+        </div>
+
+
+        <label> Pret minim: 0<input type="range" id="inp-pret" value="0" min="0"  max="200000"> 200000<span id="infoRange">(0)</span></label>
+        <label>Select simplu:
+            <select id="inp-categorie">
+                <option id="sel-toate" selected value="toate">toate</option>
+                <% for (let opt of locals.optiuni) { %>
+                    <option value="<%- opt %>"><%- opt %> </option>
+                <% } %>
+            </select>
+        </label>
+        <p>
+        <label for="tipuri_produs">Select multiplu:</label>
+            <select name="tipuri_produs" id="tipuri_produs" multiple>
+                <option id="tip-toate" selected value="toate">toate</option>
+                <% for (let opt of locals.tipuri_produs) { %>
+                    <option value="<%- opt %>"><%- opt %> </option>
+                <% } %>
+            </select>
+        </p>
+        <p>
+        <button id="filtrare">Filtreaza</button> <button id="resetare">Reseteaza</button><br/>
+        <button id="sortCrescNume">Sorteaza crescator dupa pret si numarul de dotari</button>
+        <button id="sortDescrescNume">Sorteaza descrescator dupa pret si numarul de dotari</button>
+        
+        </p>
+        
+        <p id="p-suma">Apăsați Alt+"c" pentru suma preturilor produselor afișate. </p>
+        <section id="produse">
+            <h2>Produse</h2>
+            <div class="grid-produse">
+                <% for( let prod of locals.produse) { %>
+                    <article class="produs" >
+                        <h3 class="nume d0">Nume: <a href="/produs/<%-prod.id %>" ><span class="val-nume"><%- prod.nume%></span></a></h3>
+                        <div class="info-prod d1">
+                            <table class="tabel-produs" style="width: 50px; height: 50px">
+                                <tr>
+                                    <td><p class="pret">Pret</p></td>
+                                    <td><p class="np">Norma Poluare</p></Td>
+                                    <td><p class="dotari">Dotari</p></td>
+                                    <td><p class="agabaritic">Suporta agabaritic</p></td>
+                                    <td><p class="data-adaugarii">Data adaugarii:</p></td>
+                                    <td><p class="tip-produs">Tip produs:</p></td>
+                                </tr>
+                                <tr>
+                                    <td><span class="val-pret"><%- prod.pret%></span></td>
+                                    <td><span class="val-np"><%- prod.norma_poluare%></span></td>
+                                    <td><span class="val-dotari"><%- prod.dotari%></span></td>
+                                    <td><span class="val-suporta_agabaritic"><%- prod.suporta_agabaritic%></span></td>
+                                    <td><span class="val-data"><time class="data-parsata"><%-prod.data_adaugare%></time></span></td>
+                                    <td><span class="val-tip-produs"><%- prod.tip_produs%></span></td>
+                                </tr>
+                            </table>
+                        </div>
+                        <figure class="d2">
+                            <a href="/produs/<%-prod.id %>" ><img src="/resurse/img/produse/<%- prod.imagine %>" style="width:100%;height:auto;" alt="[imagine <%- prod.nume %>]" /></a>
+                        </figure>
+                        <p class="descriere d3">Descriere: <span class="val-descriere"><%- prod.descriere%></span></p>
+                        <p class="categorie d3">Categorie:<span class="val-categorie"><%- prod.categorie%></span></p>
+<!--                        <label class="selecteaza-cos">-->
+<!--                            Selectează:<br/>-->
+<!--                            <input type="checkbox" class="select-cos" value="<%-prod.id %>" autocomplete="off">-->
+<!--                        </label>-->
+
+                    </article>
+                <% }%>
+            </div>
+        </section>
+
+    </main>
+    <script>callTranslate()</script>
+    <%- include("../fragmente/footer") %>
+    </body>
 </html>
