--- a/resurse/css/nav.css
+++ b/resurse/css/nav.css
@@ -1,53 +1,62 @@
 body {
   --albastrusprenegru: #00020D;
   --albastruinchis: #012340;
-  --menu-height: 3rem
-; }
+  --menu-height: 3rem ;
+}
 
 @keyframes arrowtoright {
-  0%,
-  12% {
-    transform: translate(-12px, 0); } }
-
+  0%, 12% {
+    transform: translate(-12px, 0);
+  }
+}
 @keyframes growDown {
   0% {
-    transform: scaleY(0); }
+    transform: scaleY(0);
+  }
   100% {
-    transform: scaleY(1); } }
-
+    transform: scaleY(1);
+  }
+}
 nav > div > ul {
+  z-index: 1000;
   list-style-type: none;
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: var(--albastruinchis); }
+  background-color: var(--albastruinchis);
+}
 
 nav > div > ul > li {
-  float: left; }
+  float: left;
+}
 
 nav > div > ul > li > a {
   display: block;
   color: white;
   text-align: center;
   padding: 14px 16px;
-  text-decoration: none; }
+  text-decoration: none;
+}
 
 ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: #333; }
+  background-color: #333;
+}
 
 li a, .dropbtn {
   display: inline-block;
   color: white;
   text-align: center;
   padding: 14px 16px;
-  text-decoration: none; }
+  text-decoration: none;
+}
 
 li.dropdown {
-  display: inline-block; }
+  display: inline-block;
+}
 
 .dropdown-content {
   display: none;
@@ -56,23 +65,30 @@ li.dropdown {
   transform-origin: top;
   background-color: var(--albastruinchis);
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  z-index: 1; }
+  z-index: 1;
+}
 
 .dropdown-content a {
   color: white;
   padding: 14px 16px;
   text-decoration: none;
   display: block;
-  text-align: left; }
+  text-align: left;
+}
 
 .sageata {
   visibility: hidden;
   display: inline-block;
-  margin-right: 5px; }
+  margin-right: 5px;
+}
 
 .dropdown:hover .dropdown-content {
-  display: block; }
+  display: block;
+}
 
 .dropdown-content a:hover .sageata {
   visibility: visible;
-  animation: arrowtoright 0.3s ease-in-out; }
+  animation: arrowtoright 0.3s ease-in-out;
+}
+
+/*# sourceMappingURL=nav.css.map */
